Community stuff works

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bcrypt": "^2.0.1",
     "body-parser": "^1.18.2",
     "cookie-parser": "~1.4.3",
+    "csurf": "^1.9.0",
     "datejs": "^1.0.0-rc3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
